# bible-rag

./: .env.example  .gitignore  LICENSE  README.md  explore_bhsa.py  explore_multilingual.py  main.py  pyproject.toml
.claude/: settings.json
.mulch/: README.md  mulch.config.yaml
.mulch/expertise/: architecture.jsonl  deployment.jsonl  scope.jsonl  seed-library.jsonl  web-app.jsonl
.planning/research/: taxonomy_expansion_proposal.md
bible_rag/: __init__.py  db.py  embedder.py  importer.py  query.py  schema.sql  web.py
bible_rag/static/: 3d.css  3d.html  3d.js  app.js  index.html  style.css  thread.css  thread.html  thread.js  timeline.css  timeline.html  timeline.js
data/: taxonomy_v2.json
data/scoring/: batch_1.jsonl  batch_2.jsonl  batch_3.jsonl  batch_4.jsonl  batch_5.jsonl  deep_batch.jsonl  deep_scores.jsonl  discovery_batch_1.jsonl  discovery_batch_2.jsonl  discovery_batch_3.jsonl  discovery_batch_4.jsonl  discovery_batch_5.jsonl  discovery_scores_1.jsonl  discovery_scores_2.jsonl  discovery_scores_3.jsonl  discovery_scores_4.jsonl  discovery_scores_5.jsonl  (+15 more)
science/: README.md  place_coordinates_check.py
scripts/: build.py  cross_link.py  demo.py  discovery_v1.py  discovery_v2_offset.py  import_macula.py  import_sefaria.py  import_stepbible.py  import_theographic.py  import_tsk.py  science_crucifixion_eclipse.py  score_deep_finalize.py  score_deep_make_batch.py  score_discovery_finalize.py  score_discovery_make_batches.py  score_finalize.py  score_make_batches.py  score_prefilter.py  score_sefaria_finalize.py  score_sefaria_make_batches.py
